--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,13 @@ h3 {
     color: #fff;
     width: 100%;
     border-radius: 6px;
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.grid + .grid {
+    border-top: 1px solid #e3e3e3;
 }
 
 .products-list {
@@ -50,7 +57,7 @@ div:has(>h3) {
 
 .grid {
     display: grid;
-    grid-template-columns: 3fr minmax(250px, 1fr);
+    grid-template-columns: 3fr minmax(300px, 1fr);
     gap: var(--gap);
     padding-block: 20px;
     width: min(1120px, calc(100% - 40px));
@@ -73,7 +80,7 @@ div:has(>h3) {
     top: 20px;
 
     .total-wrap {
-        border: 2px solid #9a9a9a;
+        border: 1px solid #e3e3e3;
         border-top: none;
         display: grid;
         grid-template-columns: 1fr fit-content(100%);
@@ -170,7 +177,7 @@ label {
 
     &:has(:is(input[type="checkbox"]:checked, input[type="radio"]:checked)) {
         &:before {
-            background-image: url('/icons/f058.svg');
+            background-image: url('/icons/icon-check.svg');
             background-size: cover;
             background-repeat: no-repeat;
         }
