--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@ h3 {
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     font-weight: 400;
+    text-wrap: balance;
 }
 
 .next {
@@ -140,6 +141,7 @@ div:has(>h3) {
     font-weight: 600;
     display: flex;
     align-items: center;
+    text-wrap: balance;
 }
 
 .product-price {
