--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,14 @@ li {
     list-style: none;
 }
 
+input {
+    &:focus {
+        outline: none;
+        border-color: #66afe9 !important;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, 0.6);
+    }
+}
+
 .title {
     text-align: center;
     padding: 10px;
@@ -29,28 +37,31 @@ li {
     text-wrap: balance;
 }
 
-div:has(> .next) {
+div:has(> :is(.next, .paylater_next)) {
     display: flex;
     justify-content: center;
-    border-top: 1px solid #e3e3e3;
     padding-block: 20px;
     width: min(1120px, calc(100% - 40px));
     margin-inline: auto;
+
+    @media (width >= 1000px) {
+        border-top: 1px solid #e3e3e3;
+    }
 }
 
-.next {
+.next, .paylater_next {
     background: #f1685c;
     border: none;
     padding: 10px;
     color: #fff;
     border-radius: 6px;
-    font-size: 24px;
+    font-size: 20px;
     text-transform: uppercase;
     font-weight: 600;
     cursor: pointer;
     width: fit-content;
     min-width: 300px;
-    margin-left: auto;
+    margin-inline: auto;
 }
 
 .grid + .grid {
@@ -175,6 +186,12 @@ div:has(>.title) {
                     'gateway'
                     'pay_later'
                     'error_text';
+            }
+        }
+
+        :is(.grid-area--selected, .grid-area--selected > .wrap) {
+            @media (width < 1000px) {
+                overflow: hidden;
             }
         }
     }
