--- a/src/style.scss
+++ b/src/style.scss
@@ -5,11 +5,16 @@
     --_title-color: #fff;
 }
 
-*, :before, :after {
+* {
     font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+}
+
+#root {
+    width: min(1120px, 100% - 40px);
+    margin-inline: auto;
 }
 
 select,
@@ -58,8 +63,6 @@ div:has(> :is(.next, .paylater_next)) {
     display: flex;
     justify-content: center;
     padding-block: 20px;
-    width: min(1120px, calc(100% - 40px));
-    margin-inline: auto;
 
     @media (width >= 1000px) {
         border-top: 1px solid #e3e3e3;
@@ -77,7 +80,7 @@ div:has(> :is(.next, .paylater_next)) {
     font-weight: 600;
     cursor: pointer;
     min-width: fit-content;
-    width: min(300px, calc(100% - 40px));
+    width: min(300px, 100%);
     margin-inline: auto;
 }
 
@@ -99,8 +102,6 @@ div:has(>.title) {
     grid-template-columns: 3fr minmax(300px, 1fr);
     gap: var(--gap);
     padding-block: 20px;
-    width: min(1120px, calc(100% - 40px));
-    margin-inline: auto;
 
     .grid-area--product-list {
         grid-area: product-list;
@@ -180,9 +181,17 @@ div:has(>.title) {
     position: sticky;
     top: 20px;
 
+    @media (width < 1000px) {
+        bottom: 0
+    }
+
     > .wrap {
         position: sticky;
         top: 20px;
+
+        @media (width < 1000px) {
+            bottom: 0
+        }
     }
 
     .total-wrap {
