--- a/src/styles/selectCountyAndCourt.scss
+++ b/src/styles/selectCountyAndCourt.scss
@@ -1,6 +1,7 @@
 .county-court-selection {
     > .wrap {
-        --gap: 20px;
         grid-template-columns: repeat(auto-fit, minmax(min(300px, 50%), 1fr));
+        display: grid;
+        gap: var(--gap);
     }
 }
