--- a/src/styles/total.scss
+++ b/src/styles/total.scss
@@ -1,7 +1,5 @@
 .column-total {
-    @media (width < 1000px) {
-        gap: 20px;
-    }
+    gap: 20px;
 
     .wrap {
         @media(width < 1000px) {
@@ -39,6 +37,9 @@
             border-block: 1px solid;
             justify-content: space-between;
             font-size: 24px;
+            display: flex;
+            flex-flow: row wrap;
+            gap: 0 10px;
 
             &:hover {
                 cursor: pointer;
